# driftwm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  config.reference.toml  diff.md  diff.txt  flake.nix
.github/workflows/: ci.yml  docs.yml
dev/docs/: CAVEATS.md  caveats.md  cross-distro-builds.md  performance-todo.md  profiling.md  reference-config-format.md  smithay-api.md  stage-refactor-plan.md  testing.md  touchscreen-plan.md
dev/scripts/: build-docs-site
dev/site/: book.toml  custom.css
docs/: TODO.md  cli.md  config.md  ipc.md  session.md  shaders.md  window-rules.md
extras/: README.md  config.toml
extras/fuzzel/: fuzzel.ini
extras/scripts/: driftwm-decal  spotlight.sh
extras/swaync/: style.css
extras/waybar/: touchbar.css  touchbar.jsonc  wvkbd-toggle.sh
nix/: nixos-module.nix  test.nix
proptest-regressions/layout/: fill.txt
proptest-regressions/stage/: tests.txt
src/: canvas.rs  decorations.rs  desktop_entry.rs  lib.rs  main.rs  session.rs  text.rs  window_ext.rs
src/backend/: cvt.rs  udev.rs  winit.rs
src/config/: defaults.rs  mod.rs  parse.rs  parse_helpers.rs  toml.rs  types.rs
src/grabs/: layer_click.rs  mod.rs  move_grab.rs  navigate_grab.rs  pan_grab.rs  resize_grab.rs  screen_space_click.rs  suspended_grab.rs  touch_gesture_grab.rs  touch_recognizer.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
src/input/: actions.rs  gestures.rs  keyboard.rs  mod.rs  pointer.rs  touch.rs
src/ipc/: client.rs  mod.rs  protocol.rs
src/layout/: fill.rs  mod.rs  snap.rs
src/protocols/: foreign_toplevel.rs  image_copy_capture.rs  mod.rs  virtual_keyboard.rs
src/render/: background.rs  blur.rs  capture.rs  capture_background.rs  closing.rs  cursor.rs  elements.rs  error_bar.rs  layers.rs  lifecycle.rs  mod.rs  screenshot.rs  shaders.rs  suspended.rs
src/shaders/: corner_clip.glsl  dot_grid.glsl
src/stage/: element.rs  mock.rs  mod.rs  tests.rs
src/state/: animation.rs  cluster_snapshot.rs  cursor.rs  fill.rs  fit.rs  focus.rs  fullscreen.rs  init.rs  membership.rs  mod.rs  navigation.rs  output.rs  persistence.rs  placement.rs  reload.rs  render_cache.rs  session_store.rs  stage_window.rs  suspended.rs  viewport.rs  window_animation.rs
src/tests/: auto_navigate_click.rs  bookmarks.rs  camera_animation.rs  cli_docs.rs  client.rs  mod.rs  (+23 more)
tests/: config_docs_test.rs  config_parse_test.rs  config_reference_test.rs  config_robustness_test.rs  config_toml_test.rs  snap_test.rs  window_rules_test.rs
(+12 files in other folders)
