[package]
name = "driftwm"
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-or-later"
authors = ["Klim Kostiuk <2601074@gmail.com>"]
description = "A trackpad-first infinite canvas Wayland compositor"
repository = "https://github.com/malbiruk/driftwm"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "5312d5caedd0c2ce563a63719d38ae2183149210", default-features = false, features = [
    "backend_winit",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_egl",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git", rev = "5312d5caedd0c2ce563a63719d38ae2183149210" }
libdisplay-info = "0.3.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tiff = "0.11"
xcursor = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
calloop = { version = "0.14", features = ["signals"] }
drm-ffi = "0.9"
bytemuck = { version = "1.25", features = ["derive"] }
cosmic-text = { version = "0.17.0", features = ["shape-run-cache"] }
sd-notify = "0.4"
tracy-client = { version = "0.18.4", default-features = false, optional = true }

[features]
# Enables the Tracy profiler instrumentation. Spans, plots, and frame marks
# are no-ops without this feature, so it carries zero overhead off.
#
# Usage:
#   1. Install the Tracy server GUI: https://github.com/wolfpld/tracy/releases
#   2. cargo run --release --features profile-with-tracy
#   3. In Tracy GUI, click "Connect" to localhost.
profile-with-tracy = [
    "dep:tracy-client",
    "tracy-client/default",
    "smithay/tracy_gpu_profiling",
]
# Tracy server connects on-demand instead of at startup. Use when running the
# compositor as a long-lived process and only profiling occasionally.
profile-with-tracy-ondemand = [
    "profile-with-tracy",
    "tracy-client/ondemand",
    "tracy-client/manual-lifetime",
]
# Wraps the global allocator with Tracy's profiled allocator so allocations
# show up on the timeline. Adds noticeable overhead — use only when chasing
# allocation hotspots.
profile-with-tracy-allocations = ["profile-with-tracy"]

[profile.release]
lto = "thin"
debug = "line-tables-only"
